syntax = 'proto3';
package th2;

import "google/protobuf/empty.proto";
import "th2/infra.proto";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.simulator.grpc";

message RuleID {
    int32 id = 1;
}

message RuleInfo {
    RuleID id = 1;
    string class_name = 2;
    ConnectionID connection_id = 3;
}

message RulesInfo {
    repeated RuleInfo info = 1;
}

service ServiceSimulator {
    rpc removeRule(RuleID) returns (google.protobuf.Empty) {}
    rpc getRulesInfo(google.protobuf.Empty) returns (RulesInfo) {}
}